--- a/src/NoteForm/NoteForm.css
+++ b/src/NoteForm/NoteForm.css
@@ -7,7 +7,7 @@
     margin: 0px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
-    padding: 8px 24px;
+    padding: 0px 24px;
     font-size: 1.3em;
     font-family: 'Droid Sans', sans-serif;
     background-color: #019875;
@@ -22,8 +22,8 @@
 }
 
 .noteInput{
-    width: 800px;
-    min-width: 800px;
+    /*width: 800px;*/
+    /*min-width: 800px;*/
     font-size: 1.3em;
     padding-left: 20px;
     border-top-left-radius: 4px;
